Bug 1172450 - Size and position the dropdown arrow properly in vertical writing modes. r=smontagu